@@ -7,6 +7,7 @@ hildon-home (0.3.39~unreleased) unstable; urgency=low
   Jan Arne:
   * Fixes: NB#129876 - App shortcuts on the Desktop not according to latest
     spec
+  * Fixes: NB#124888 - Notifications are shown on a locked device
 
  -- Aapo Kojo <aapo.kojo@nokia.com>  Tue, 07 Jul 2009 13:27:37 +0300
 
